--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ version: 2
 name: Khanh Quang Chung
 title: Senior Embedded Software Developer
 email: reedus.chung@gmail.com
+phone: 43423
 date of birth: 1985
 
 # website: www.github.com/sproogen/resume-theme
