--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ version: 2
 name: Khanh Quang Chung
 title: Senior Embedded Software Developer
 email: reedus.chung@gmail.com
-phone: 43423
-date of birth: 1985
+phone: (+84) 907060401
+a: fdfdd
 
 # website: www.github.com/sproogen/resume-theme
 
