--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ version: 2
 # Personal info
 name: Khanh Quang Chung
 title: Senior Embedded Software Developer
-email: reedus.chung@gmail.com | s
-phone: (+84) 907060401 | s
+email: reedus.chung@gmail.com
+phone: (+84) 907060401 | Address: Ho Chi Minh, Vietnam
 
 # website: www.github.com/sproogen/resume-theme
 
