--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ darkmode: false
 
 # Social links
 # twitter_username: facespics
-# github_username:  sproogen
+github_username:  reenor
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-# linkedin_username: jameswgrant
+linkedin_username: reedus.chung@gmail.com
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
