--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  reenor
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-linkedin_username: khanh chung quang
+linkedin_username: reedus
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
