--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ linkedin_username: reedus
 # Additional icon links
 additional_links:
 - title: Location
-  icon: fas fa-globe
+  icon: fas fa-map-marker
   url: https://goo.gl/maps/7hL1KTYAgQnMWHeX8
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
