--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Khanh Quang Chung
 title: Senior Embedded Software Developer
 email: reedus.chung@gmail.com
-phone: (+84) 907060401 | Ho Chi Minh, Vietnam
+phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
 
 # website: www.github.com/sproogen/resume-theme
