--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Khanh Quang Chung
+name: Khanh Q. Chung
 title: Senior Embedded Software Developer
 email: reedus.chung@gmail.com
 phone: (+84) 907060401
