--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name is Khanh, and I'm a careful embedded software developer with over 6 years experience. In addition, I also have 2 years experience of working as a DevOps engineer guy.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
