--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,10 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name is Khanh, and I'm a careful embedded software developer with over 6 years experience. In addition, I also have 2 years experience of working as a DevOps engineer guy.
+  Dear Sir/Madam,
+  
+  My name is Khanh, and I'm a careful embedded software developer with over 6 years experience.
+  In addition, I also have 2 years experience of working as a DevOps engineer guy.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
