--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,8 @@ content:
         title: Bachelor of Computer Science
         caption: 2006 - 2009
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
-        link: github.com/sproogen
         quote: >
-          Thesis... Grade...
+          Rank: Excellent
         description: | # this will include new lines to allow paragraphs
           
 
