--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,15 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
+      # H
+      
+      ## H
+      
+      ### H
+      
       **Bachelor**
-      *fdfdf* fdfdfdfdfdfd
+      
+      fdfdfdfdfdfd *fdfdf* 
       
       Alongside my interests in networks and software engineering some of my other interests and hobbies are:
       - Rock climbing
