--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ content:
       - layout: top
         title: Bachelor of Computer Science, 2009
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
-        caption: Rank: Excellent
+        caption: Excellent of rank
         quote: >
           
         description: | # this will include new lines to allow paragraphs
