--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,16 @@ content:
     content:
       - layout: top
         title: Bachelor of Computer Science, 2009
-        sub_title: Excellent of rank
-        caption: University of Science, Vietnam National University - Ho Chi Minh City
+        sub_title: University of Science, Vietnam National University - Ho Chi Minh City
+        caption: Excellent of rank
+        quote: >
+          
+        description: | # this will include new lines to allow paragraphs
+        
+      - layout: top
+        title: Master of Computer Science, 2012
+        sub_title: University of Science, Vietnam National University - Ho Chi Minh City
+        caption: Defended MSc thesis on topic "Tag-anticollison using TDMA approach for the SELab MIFARE reader" with the mark Excellent
         quote: >
           
         description: | # this will include new lines to allow paragraphs
