--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ content:
       - layout: top
         title: Bachelor of Computer Science, 2009
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
-        caption: Excellent of rank
+        caption: Excellent grade
         quote: >
           
         description: | # this will include new lines to allow paragraphs
@@ -77,11 +77,45 @@ content:
       - layout: top
         title: Master of Computer Science, 2012
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
-        caption: Defended MSc thesis on topic "Tag-anticollison using TDMA approach for the SELab MIFARE reader" with the mark Excellent
+        caption: Defended MSc thesis on topic "Tag-anticollison using the TDMA approach for the SELab MIFARE reader" with the mark as Excellent
         quote: >
           
         description: | # this will include new lines to allow paragraphs
-          
+
+  - title: Experience # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: NXP Semiconductors Vietnam
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: Internship
+        caption: 2008
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+
+      - layout: left
+        title: Software Engineering Lab (SELab)
+        link: https://www.selab.hcmus.edu.vn
+        # link_text: boringcompany.com
+        sub_title: Researcher
+        caption: 2009 - 2015
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Every company needs its networks
+            
+      - layout: left
+        title: ZenithTek
+        # link: https://www.selab.hcmus.edu.vn
+        # link_text: boringcompany.com
+        sub_title: Co-Founder
+        caption: Nov 2012 - Dec 2015
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
@@ -101,20 +135,6 @@ content:
           This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-        description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
   - title: A Little More About Me
     layout: text
