--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Khanh Q. Chung
-title: Senior Embedded Software Developer
+title: Senior Embedded Software Engineer
 email: reedus.chung@gmail.com
 phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
@@ -66,7 +66,7 @@ content:
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: top
+      - layout: top-middle
         title: Bachelor of Computer Science, 2009
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
         caption: Excellent grade
@@ -74,7 +74,7 @@ content:
           
         description: | # this will include new lines to allow paragraphs
         
-      - layout: top
+      - layout: top-middle
         title: Master of Computer Science, 2012
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
         caption: Defended MSc thesis on topic "Tag-anticollison using the TDMA approach for the SELab MIFARE reader" with the mark as Excellent
@@ -85,22 +85,14 @@ content:
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
-        title: NXP Semiconductors Vietnam
-        # link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Internship
-        caption: 2008
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-        description: | # this will include new lines to allow paragraphs
+      
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
       - layout: left
         title: Software Engineering Lab (SELab)
         link: https://www.selab.hcmus.edu.vn
         # link_text: boringcompany.com
-        sub_title: Researcher
+        sub_title: Embedded Software Researcher
         caption: 2009 - 2015
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
@@ -108,14 +100,22 @@ content:
             Every company needs its networks
             
       - layout: left
-        title: ZenithTek
+        title: ZenithTek Co., Ltd
         # link: https://www.selab.hcmus.edu.vn
         # link_text: boringcompany.com
-        sub_title: Co-Founder
-        caption: Nov 2012 - Dec 2015
+        sub_title: Embedded Software Engineer, Co-Founder
+        caption: 02/2012 - Dec 2015
+        quote: >
+          ZenithTek was a hightech startup founded in Vietnam in 2012 in which we mainly focused on improving operational effeciency of firms.
+        description: | # this will include new
+      
+      - layout: left
+        title: Embedded Software Internship
+        sub_title: NXP Semiconductors Vietnam
+        caption: 09/2008 - 11/2008
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-        description: | # this will include new
+        description: | # this will include new lines to allow paragraphs
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
