--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,8 @@ content:
         quote: >
           The Lab where I did my thesis at had established a partner relationship with NXP Vietnam; therefore, I had a chance to carry out the thesis under expert guidance.
         description: | # this will include new lines to allow paragraphs
-          + Developed a lightweight USB host library running on the MCB2388 evaluation board. The library supported three USB device classes including Audio, Human Interface Device and Mass Storage. 
-          + fd
+          + Developed a lightweight USB host library running on the MCB2388 evaluation board. The library complied with USB 2.0 Specification and supported three USB device classes including Audio Device, Human Interface Device (HID) and Mass Storage Device (MSD).
+          + Applied version control principle to manage and track changes to code and assets across the USB project using SVN software.
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
