--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ content:
       - layout: top-middle
         title: Master of Computer Science, 2012
         sub_title: University of Science, Vietnam National University - Ho Chi Minh City
-        caption: Defended MSc thesis on topic "Tag-anticollison using the TDMA approach for the SELab MIFARE reader" with the mark as Excellent
+        caption: Defended MSc thesis on topic "Study on Tag Anti-Collison using Time Division Multiple Access approach for the SELab MIFARE reader" with the mark as Excellent
         quote: >
           
         description: | # this will include new lines to allow paragraphs
