--- a/_config.yml
+++ b/_config.yml
@@ -101,17 +101,20 @@ content:
         caption: 02/2012 -  07/2015
         quote: >
           ZenithTek was a hightech startup founded in Vietnam in 2012 in which we mainly focused on improving operational effeciency of firms.
+          The company went out of business after three years.
         description: | # this will include new
-          + Lead 
+          + Led embedded team to build a compact device named "Mini Terminal" that is similar to Raspberry PI.
 
       - layout: top
         title: Embedded Software Internship
         sub_title: NXP Semiconductors Vietnam
         caption: 09/2008 - 11/2008
         quote: >
-          The Lab where I did my thesis at had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the thesis under expert guidance and the professional workplace.
+          The Lab where I did my thesis at had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the thesis
+          under expert guidance and the professional workplace.
         description: | # this will include new lines to allow paragraphs
-          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification and provides three USB classes including Audio, Human Interface Device (HID) and Mass Storage.
+          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification
+          and provides three USB classes including Audio, Human Interface Device (HID) and Mass Storage.
           + Applied version control principle to manage and track changes to code and assets across the USB project using SVN software.
 
   - title: Projects # Title for the section
