--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,26 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top
+        title: Lecturer
+        sub_title: Department of Embedded Systems and Robotics, University of Information Technology
+        caption: 10/2015 - Now
+        link: https://ktmt.uit.edu.vn/en/, https://www.uit.edu.vn/en
+        quote: >
+          
+        description: | # this will include new lines to allow paragraphs
+          + 
+
+      - layout: top
+        title: IoT Team Leader, DevOps Engineer, Co-Founder
+        sub_title: Leanwell Technology Co., Ltd
+        caption: 08/2017 - 04/2021
+        link: https://www.leanwell.co
+        quote: >
+          
+        description: | # this will include new lines to allow paragraphs
+          + 
+
+      - layout: top
         title: Embedded Software Researcher
         sub_title: Software Engineering Laboratory
         caption: 12/2009 - 09/2015
