--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ content:
     content:
       - layout: top
         title: Lecturer
-        sub_title: Department of Embedded Systems and Robotics, University of Information Technology
+        sub_title: Department of Embedded Systems and Robotics, University of Information Technology, Vietnam National University - Ho Chi Minh City
         caption: 10/2015 - Now
         link: https://ktmt.uit.edu.vn/en/, https://www.uit.edu.vn/en
         quote: >
