--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ content:
         title: Lecturer
         sub_title: Department of Embedded Systems and Robotics, University of Information Technology, Vietnam National University - Ho Chi Minh City
         caption: 10/2015 - Now
-        link: https://ktmt.uit.edu.vn/en/, https://www.uit.edu.vn/en
+        link: https://uit.edu.vn/en/
         quote: >
           
         description: | # this will include new lines to allow paragraphs
