--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,8 @@ content:
         title: Lecturer
         sub_title: Department of Embedded Systems and Robotics, University of Information Technology, Vietnam National University - Ho Chi Minh City
         caption: 10/2015 - Now
-        link: https://uit.edu.vn/en/
+        link: https://www.en.uit.edu.vn
+        link: https://www.en.uit.edu.vn
         quote: >
           
         description: | # this will include new lines to allow paragraphs
