--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ content:
           appreciate the time everybody spent for me when I was here.
         description: | # this will include new lines to allow paragraphs
           + Developed an ASM/C Compiler for a domestic 8-bit MCU named SG8V1.
-          + Built a time attendance system on [S3C2440 ARM9 boar](http://www.friendlyarm.net/products/mini2440). The cool thing was that
+          + Built a time attendance system on [S3C2440 ARM9](http://www.friendlyarm.net/products/mini2440) board. The cool thing was that
           each user's fingerprint was stored in their RFID tag instead of using a centralized database.
           + Built a MIFARE reader/writer on [RC522 MCU](https://www.nxp.com/docs/en/data-sheet/MFRC522.pdf).
             
