--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ content:
           + Built a MIFARE reader/writer using [RC522](https://www.nxp.com/docs/en/data-sheet/MFRC522.pdf) MCU. This reader supports various kinds of MIFARE,
           such as 1K/4K, Ultralight and DESFire EV1.
           + Created a data capture device via RS232 interface. This device will be plugged into a bill printer to collect every single byte of data printed.
-          
+          + Renesas Racing...
       - layout: top
         title: Embedded Software Engineer, Co-Founder
         sub_title: ZenithTek Co., Ltd
