--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ version: 2
 
 # Personal info
 name: Khanh Q. Chung
-title: Senior Embedded Software Engineer
+title: Senior Embedded Software Engineer | DevOps
+title: DevOps
 email: reedus.chung@gmail.com
 phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
