--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ version: 2
 
 # Personal info
 name: Khanh Q. Chung
-title: Senior Embedded Software Engineer | DevOps
-title: DevOps
+title: Senior Embedded Software & DevOps Engineer 
 email: reedus.chung@gmail.com
 phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
