--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,7 @@ content:
           + Managed to bridge the gap between software development team and IT operation guys at client site: deploy software release as quick as possible,
           ensure services are easily scalable as well as having ability of high availability, protect servers against hackers and viruses.
           + Played the role of purchasing relating to various electronic components.
+          + Set up the production process of all company products.
 
       - layout: top
         title: Embedded Software Researcher
